# smashprosgg-statistic

./: .gitignore  Cargo.toml  README.md
notes/: api.md  stats.md  summary.md
smashprosgg-statistics-backend/: Cargo.toml  Config.toml
smashprosgg-statistics-backend/src/: api.rs  connection.rs  database.rs  game.rs  main.rs  set.rs  statistics.rs
smashprosgg-statistics-frontend/: README.md  angular.json  package-lock.json  package.json
smashprosgg-statistics-frontend/src/: index.html  styles.scss
smashprosgg-statistics-frontend/src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
smashprosgg-statistics-frontend/src/app/components/character-selecter/: character-selecter.component.html  character-selecter.component.scss  character-selecter.component.spec.ts  character-selecter.component.ts
smashprosgg-statistics-frontend/src/app/pages/landing-page/: landing-page.component.html  landing-page.component.scss  landing-page.component.ts
smashprosgg-statistics-frontend/src/app/pages/stats-page/: stats-page.component.html  stats-page.component.scss  stats-page.component.ts
smashprosgg-statistics-frontend/src/app/pipes/: stage-id-to-name.pipe.spec.ts  stage-id-to-name.pipe.ts
smashprosgg-statistics-frontend/src/app/services/: backend.service.ts
smashprosgg-statistics-frontend/src/enviroment/: enviroment.ts
