[package]
name = "smashprosgg-statistics-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
reqwest = "0.11.23"
json = "0.12.4"
serde_json = "1.0.111"